@@ -5,5 +5,7 @@ AUX tools.conf 21 RMD160 88b5b8c8e088333e9c00b2e1c3f3572553342e7b SHA1 42a670b88
 AUX xautostart.conf 59 RMD160 ca1ea3f1b82caa6e97d94835d88a39a6f153ff7a SHA1 92ba86e426fdaa3de1a8aad56db2d2ac358949a1 SHA256 13398e0ffcd7005bc8c92f3cd62865d2601e52fc980a4702fa252bef5c1efcc7
 DIST open-vm-tools-2007.09.04-56574.tar.gz 1987725 RMD160 8bb9952471ff5635e70741afd357170b6c0a8307 SHA1 d3ffcd974e67b5f83b760582f8c2606721d94403 SHA256 4e4a5c805ffcbcf8de9deca9b96dd874d2be405a994729a4becf3501b73b46bc
 DIST open-vm-tools-2007.10.08-SNAPSHOT.tar.gz 2419956 RMD160 2f4de4b8f47866bbcbc8f846b3d835db736d1adc SHA1 b4ff62ddfde889898de779a2670f19438090aa7f SHA256 81a55d15c080131d160598b4ec34003d3f66680c06f574fc2435f8fd3bed2359
+DIST open-vm-tools-2007.11.21-64693.tar.gz 2295022 RMD160 e166040e713f4b7f8fae835862128a7ec3fdca75 SHA1 5b5e8edd726a997e3db0585af010a4be3405cc67 SHA256 b00530bf578b07127880ad3107b2b98873d3e5f74876dd94644bac3883be4431
 EBUILD open-vm-tools-0.0.20070904.56574.ebuild 3793 RMD160 832f2aee5ac13bd9ef4d4832ba2e5d04ef10c6fd SHA1 8ee7b49789a7c24c19072ca97fdd4e7597ca919f SHA256 09dc189ef719ab31a376e8c18e25770241097d235a5c229454050880befb92fc
 EBUILD open-vm-tools-0.0.20071008.99999.ebuild 3705 RMD160 298bcb5016af5057de7a36c079b1daf80bba6847 SHA1 9a02ca469f00a12446e5abab6d22c9c3f78ce038 SHA256 e50e155d7425bc1f74f5fb45ca031854f11a0c2cacc9d592f88f071bf65dad8e
+EBUILD open-vm-tools-0.0.20071121.64693.ebuild 3842 RMD160 6b39d58acea7e9ae33f51fb8c24716aebe1f756f SHA1 d303f6aec004548e579c222e09bca34648e2733e SHA256 211bd7eaba9c1ac474f5ac1f9ed92e5c50bbf06d47c57c36b501c1effcec5b0f
