@@ -1,11 +1,11 @@
 AUX patches/000_all_makefile-include-directory.patch 342 RMD160 ae8b7c2e628681fff153bfa10242e62df5ab2e10 SHA1 be4f203063e676dc022ce600e15479b6ea56b954 SHA256 2da16602ef3c4cb040ac80a9fed18660fadcae2e843f425da0872f50aa5356db
 AUX patches/020_all_epoll-def-warnings.patch 435 RMD160 b9152d9af93862c99c72abc1ef97639351d82141 SHA1 d0a40f0483a144fc98d02213c6c63b2e2ddb9f66 SHA256 2033f23fc8d696e1a9d20c6c446703166ea82a4e5e448494e6a52ef09bac7521
-DIST VMware-player-2.0.1-55017.i386.tar.gz 67772207 RMD160 db563bf082c0b7618b5dcc93705edd98135a4322 SHA1 81181626aa3f7c101e2952cf7a941baed31958c4 SHA256 c05c4a88b88fe09cd5203718840121dddba0a7a371bfa8b549bb63e3a52f1d39
-DIST VMware-player-2.0.1-55017.x86_64.tar.gz 33055319 RMD160 edb9d15b97931b57b36006854366fd8ecc331988 SHA1 798bfb56c4c6c74f7c9aff78cb949dd4e71b00f7 SHA256 1c5ac84dc91e15eb898f7913cee1aaf79aecc3f56acb9f9c39a931fee4611955
+DIST VMware-player-2.0.2-59824.i386.tar.gz 67762051 RMD160 bdf0375045aa2702f0c19cf755e019307316db2e SHA1 52a9018438746ac88e965ae081120da6f8e9fbf5 SHA256 2fcaca511c0344333d9f306bab09507573c17cc4d71807a545624953cc68e138
+DIST VMware-player-2.0.2-59824.x86_64.tar.gz 33049210 RMD160 1d4351d7cc8bec4d4fe492c46656807ac2220717 SHA1 a7aace822f5a730ec7d289d074c607832abd8c72 SHA256 b0fce2e1552070d492e04ab684aa32fecf587ec06e3ab802373d5e94e0e9f72b
 DIST vmware-any-any-update114.tar.gz 470728 RMD160 06beab6c71a73a94da7e95cfd846117e299a22c1 SHA1 47323b23955a9eddda396ac1970c0a0cfbd02dea SHA256 eff8a5240a2928ef14e5ec81494ea1f531c4b7ea6f9b869659e8f7ea3272fdd5
 EBUILD vmware-modules-1.0.0.11-r1.ebuild 310 RMD160 7748b52659054c3b5b29181cbb35083eee30158a SHA1 7f20b5bb8808761897ccc8c395f6ee3e9d10065e SHA256 e897d58dd5b68ede4c58f02d2702dcdd0b85b16726bd8b4ec04e28a73ada8b7f
 EBUILD vmware-modules-1.0.0.13-r1.ebuild 309 RMD160 5e9267a28aaa0c36a61afc38110dd8f29f5f0df2 SHA1 7145a3756274c6617de84c058d79ebe77b2a637c SHA256 4a394b382a44026957253b802c2be37ccfd980048b7e68e344859861ad292d5f
 EBUILD vmware-modules-1.0.0.15-r1.ebuild 311 RMD160 910dd70caac0af5c1bdb6d714b96f9c134cbdd8a SHA1 c56288915c67790e3b38207e14598923203b2c7c SHA256 dbce7d028f4fe0f042323a7e05754e311366ac33feb7361dab63af70017683f7
 EBUILD vmware-modules-1.0.0.16-r1.ebuild 351 RMD160 5a35d982c74bae2c103d4f53ea347488e90ea4a2 SHA1 7c5302beb34cb62ed7e59a301f494b84951382ad SHA256 8cf7ef6198d1ede414f07ea18b23abf45dccd9e240d0ab9df1064307c71347c8
-EBUILD vmware-modules-1.0.0.17.ebuild 635 RMD160 1c30e8f317cc3781c99aa1622fe1aa7baa1ff221 SHA1 7b2a7efaa3e07d90057710efc43479f7fa33b2f2 SHA256 2fff997c29cce7a437a173463334f63f2c3e4d1045b6688aad4115bcdb4c095e
+EBUILD vmware-modules-1.0.0.17.ebuild 635 RMD160 6a6d52c9a39c8807dc1aa22191f1c6c742a35be4 SHA1 a52191f1aea65106bc4e69b3de8cadfe66a68f93 SHA256 5bcba379b33247d94e675212127dfdfb4f4e12d2a395d8a50d16e2ef40ca6751
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
