@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  24 Nov 2007; Mike Auty <ikelos@gentoo.org>
+  +app-emulation/open-vm-tools/open-vm-tools-0.0.20071121.64693.ebuild,
+  app-emulation/vmware-modules/vmware-modules-1.0.0.17.ebuild:
+  Fix the manifests for vmware-any-any-update114, and put in the latest
+  open-vm-tools.
+
   24 Oct 2007; Mike Auty <ikelos@gentoo.org> ++, ++, ++,
   -app-emulation/vmware-player/files/2.0.1.55017/000_all_initd-location.patc
   h,
